Prevent jumps in progress bar if multiple batchDecrypt run at the same time

--- a/app/css/app/_feed.scss
+++ b/app/css/app/_feed.scss
@@ -30,6 +30,10 @@
   textarea                { display: block  !important; }
 }
 
+iframe#rdbIndicator {
+  display: none;
+}
+
 // Notice when no posts on feed
 #empty-group-notice {
   margin-top: 3em;
